# savagesvg

./: AUTHORS  COPYING  README  autogen.sh  configure.ac
src/SharpVectorBindings/: AssemblyInfo.cs  Makefile.am  SharpVectorBindings.build  SharpVectorBindings.csproj
src/SharpVectorBindings/SharpVectors/Dom/: IAttribute.cs  ICDataSection.cs  ICharacterData.cs  IComment.cs  IDocument.cs  IElement.cs  INodeList.cs  IText.cs  IXmlElement.cs  IXmlNode.cs
src/SharpVectorBindings/SharpVectors/Dom/Css/: ICssPrimitiveValue.cs  ICssStyleDeclaration.cs
src/SharpVectorBindings/SharpVectors/Dom/Stylesheets/: IMediaList.cs  IStyleSheetList.cs
src/SharpVectorBindings/SharpVectors/Dom/Svg/: IContainerElement.cs  IGraphicsElement.cs  ISharpDoNotPaint.cs  ISharpGdiPath.cs  ISvgWindow.cs
src/SharpVectorCss/: AssemblyInfo.cs  Makefile.am  SharpVectorCss.build  SharpVectorCss.csproj
src/SharpVectorCss/SharpVectors/Dom/Css/: CssAbsPrimitiveLengthValue.cs  CssCollectedStyleDeclaration.cs  CssMediaRule.cs  CssPrimitiveAngleValue.cs  CssPrimitiveLengthValue.cs  CssPrimitiveRgbValue.cs  CssPrimitiveValue.cs  CssPropertyProfile.cs  CssRule.cs  CssRuleList.cs  CssStyleDeclaration.cs  CssStyleSheet.cs  CssTests.cs  CssValue.cs  CssXmlDocument.cs  CssXmlElement.cs  InheritanceTests.cs  Rect.cs  RgbColor.cs  TestUtil.cs  XPathSelector.cs
src/SharpVectorCss/SharpVectors/Dom/Stylesheets/: MediaList.cs  StyleSheet.cs  StyleSheetList.cs
src/SharpVectorDom/: AssemblyInfo.cs  Makefile.am  SharpVectorDom.build  SharpVectorDom.csproj
src/SharpVectorDom/SharpVectors/Dom/: Attribute.cs  CDataSection.cs  Comment.cs  Conversion.cs  Declaration.cs  Document.cs  DocumentFragment.cs  DocumentType.cs  DomImplementation.cs  Element.cs  EntityReference.cs  ProcessingInstruction.cs  SignificantWhitespace.cs  Text.cs  Whitespace.cs
src/SharpVectorDom/SharpVectors/Dom/Events/: Event.cs  EventListenerMap.cs  EventListenerMapEntry.cs  EventTarget.cs  EventType.cs  IEventTargetSupports.cs  KeyboardEvent.cs  MouseEvent.cs  MutationEvent.cs  MutationNameEvent.cs  TextEvent.cs  UiEvent.cs
src/SharpVectorGtkViewer/: GtkSharpVectorViewer.cs  Makefile.am  SvgImageWidget.cs  svg-viewer.glade  w3ctests.txt
src/SharpVectorObjectModel/: AssemblyInfo.cs  Makefile.am  SharpVectorObjectModel.build  SharpVectorObjectModel.csproj
src/SharpVectorObjectModel/SharpVectors/Dom/Svg/: SvgExternalResourcesRequiredException.cs
src/SharpVectorObjectModel/SharpVectors/Enumerators/: SvgLengthListEnumerator.cs  SvgListEnumerator.cs  SvgNumberListEnumerator.cs  SvgPointListEnumerator.cs  SvgStringListEnumerator.cs  SvgTransformListEnumerator.cs
src/SharpVectorPerfTest/: AssemblyInfo.cs  Makefile.am  PerfTest.cs  SharpVectorPerfTest.csproj
src/SharpVectorRenderingEngine/: AssemblyInfo.cs  Makefile.am  SharpVectorRenderingEngine.build  SharpVectorRenderingEngine.csproj
src/SharpVectorRenderingEngine/SharpVectors/Renderer/Gdi/: GdiRenderer.cs  GraphicsNode.cs
src/SharpVectorScripting/: AssemblyInfo.cs  Makefile.am  SharpVectorScripting.build  SharpVectorScripting.csproj
src/SharpVectorScripting/SharpVectors/Scripting/: ClosureEventMonitor.cs  JScriptEngine.cs  ScriptEngine.cs  ScriptEventMonitor.cs  ScriptTimerMonitor.cs  VsaScriptEngine.cs
src/SharpVectorScripting/SharpVectors/Scripting/Wrapping/: Css.cs  CssWrapper.cs  Dom.cs  DomWrapper.cs  Events.cs  EventsWrapper.cs  ScriptWrapper.cs  Smil.cs  SmilWrapper.cs  StyleSheets.cs  StyleSheetsWrapper.cs  Svg.cs  SvgWrapper.cs  Views.cs  ViewsWrapper.cs  Window.cs  WindowWrapper.cs
src/SharpVectorUtil/: AssemblyInfo.cs  Makefile.am  SharpVectorUtil.build  SharpVectorUtil.csproj
src/SharpVectorUtil/SharpVectors/: ApplicationContext.cs
src/SharpVectorUtil/SharpVectors/Collections/: TypeDictionary.cs
src/SharpVectorUtil/SharpVectors/Net/: CacheInfo.cs  DataWebRequest.cs  DataWebResponse.cs  ExtendedHttpWebRequest.cs  ExtendedHttpWebResponse.cs  ICacheManager.cs  NoCacheManager.cs  WinAppCacheManager.cs
src/SharpVectorUtil/SharpVectors/Polynomials/: Polynomial.cs  SqrtPolynomial.cs
src/SharpVectorUtil/SharpVectors/Text/: StringUtil.cs
src/SharpVectorUtil/SharpVectors/Xml/: LocalDtdXmlUrlResolver.cs
test/: AssemblyInfo.cs  Makefile.am  Makefile.in  SharpVectorUnitTests.csproj
test/SharpVectorCss/SharpVectors/Dom/Css/: CssCollectedStyleDeclarationTests.cs  CssPrimitiveAngleValueTests.cs  CssPrimitiveLengthValueTests.cs  CssPrimitiveRgbValueTests.cs  CssStyleDeclarationTests.cs  CssTestsTests.cs  CssValue.cs  CssValueTests.cs  CssXmlElementTests.cs  InheritanceTestsTests.cs  RectTests.cs  RgbColorTests.cs  TestUtilTests.cs  XPathSelectorTests.cs
test/SharpVectorDom/SharpVectors/Dom/: CommentTests.cs  ConversionTests.cs  ElementTests.cs
test/SharpVectorDom/SharpVectors/Dom/Events/: EventListenerMapEntryTests.cs  EventTargetTests.cs  EventTests.cs  MutationEventTests.cs
test/SharpVectorRenderingEngine/SharpVectors/Renderer/Gdi/: GdiRendererTests.cs
test/SharpVectorUtil/SharpVectors/Polynomials/: PolynomialTests.cs  SqrtPolynomialTests.cs
test/SharpVectors/Css/: CssTests.cs  InheritanceTests.cs  TestUtil.cs
test/SharpVectors/Dom/Events/: EventTests.cs
test/SharpVectors/Dom/StyleSheets/: MediaListTests.cs
test/SharpVectors/Dom/Svg/: CssPropertyProfileTests.cs  CssSelectorsTests.cs  SvgElementTests.cs  SvgWindowTest.cs  Util.cs
test/SharpVectors/Dom/Svg/Basic types/: SvgAngleTests.cs  SvgElementTests.cs  SvgLengthListTests.cs  SvgLengthTests.cs  SvgListTests.cs  SvgMatrixTests.cs  SvgNumberListTests.cs  SvgNumberTests.cs  SvgPointListTests.cs  SvgPointTests.cs  SvgStringListTests.cs  SvgTransformListTests.cs
test/SharpVectors/Dom/Svg/Color/: SvgColorTests.cs
test/SharpVectors/Dom/Svg/Document structure/: SvgDocumentTests.cs  SvgUseElementTests.cs  (+3 more)
test/SharpVectors/Net/: DataWebRequestTests.cs  ExtendedHttpWebRequestTests.cs
test/SharpVectors/Renderer/Gdi/: BitmapComparator.cs  CompareUtil.cs  GdiRendererTests.cs
test/resources/: css_style_element.xml  css_unittest_01.css  fxcopProject.FxCop  gzip-test.svgz  hc_staff.html  hc_staff.xml  staffNS.xml
(+178 files in other folders)
