BINDIR		= $(top_builddir)/build/
ASSEMBLY_DLL	= SharpVectorBindings.dll 
ASSEMBLY	= $(BINDIR)/$(ASSEMBLY_DLL)

FILES = \
	AssemblyInfo.cs \
	SharpVectors/Dom/IAttribute.cs \
	SharpVectors/Dom/ICDataSection.cs \
	SharpVectors/Dom/ICharacterData.cs \
	SharpVectors/Dom/IComment.cs \
	SharpVectors/Dom/IDocument.cs \
	SharpVectors/Dom/IDocumentFragment.cs \
	SharpVectors/Dom/IDocumentType.cs \
	SharpVectors/Dom/IDomConfiguration.cs \
	SharpVectors/Dom/IDomImplementation.cs \
	SharpVectors/Dom/IElement.cs \
	SharpVectors/Dom/IEntityReference.cs \
	SharpVectors/Dom/INode.cs \
	SharpVectors/Dom/INodeList.cs \
	SharpVectors/Dom/IProcessingInstruction.cs \
	SharpVectors/Dom/IText.cs \
	SharpVectors/Dom/IXmlElement.cs \
	SharpVectors/Dom/IXmlNode.cs \
	SharpVectors/Dom/Css/CssPrimitiveType.cs \
	SharpVectors/Dom/Css/CssRuleType.cs \
	SharpVectors/Dom/Css/CssValueType.cs \
	SharpVectors/Dom/Css/ICounter.cs \
	SharpVectors/Dom/Css/ICssCharsetRule.cs \
	SharpVectors/Dom/Css/ICssFontFaceRule.cs \
	SharpVectors/Dom/Css/ICssImportRule.cs \
	SharpVectors/Dom/Css/ICssMediaRule.cs \
	SharpVectors/Dom/Css/ICssPageRule.cs \
	SharpVectors/Dom/Css/ICssPrimitiveValue.cs \
	SharpVectors/Dom/Css/ICssRule.cs \
	SharpVectors/Dom/Css/ICssRuleList.cs \
	SharpVectors/Dom/Css/ICssStyleDeclaration.cs \
	SharpVectors/Dom/Css/ICssStyleRule.cs \
	SharpVectors/Dom/Css/ICssStyleSheet.cs \
	SharpVectors/Dom/Css/ICssUnknownRule.cs \
	SharpVectors/Dom/Css/ICssValue.cs \
	SharpVectors/Dom/Css/ICssValueList.cs \
	SharpVectors/Dom/Css/IDocumentCss.cs \
	SharpVectors/Dom/Css/IDomImplementationCss.cs \
	SharpVectors/Dom/Css/IElementCssInlineStyle.cs \
	SharpVectors/Dom/Css/IRect.cs \
	SharpVectors/Dom/Css/IRgbColor.cs \
	SharpVectors/Dom/Css/IViewCss.cs \
	SharpVectors/Dom/Events/AttrChangeType.cs \
	SharpVectors/Dom/Events/DomEvent.cs \
	SharpVectors/Dom/Events/EventException.cs \
	SharpVectors/Dom/Events/EventPhase.cs \
	SharpVectors/Dom/Events/ICustomEvent.cs \
	SharpVectors/Dom/Events/IDocumentEvent.cs \
	SharpVectors/Dom/Events/IEvent.cs \
	SharpVectors/Dom/Events/IEventException.cs \
	SharpVectors/Dom/Events/IEventTarget.cs \
	SharpVectors/Dom/Events/IKeyboardEvent.cs \
	SharpVectors/Dom/Events/IMouseEvent.cs \
	SharpVectors/Dom/Events/IMutationEvent.cs \
	SharpVectors/Dom/Events/IMutationNameEvent.cs \
	SharpVectors/Dom/Events/ITextEvent.cs \
	SharpVectors/Dom/Events/IUiEvent.cs \
	SharpVectors/Dom/Events/KeyLocationCode.cs \
	SharpVectors/Dom/Stylesheets/IDocumentStyle.cs \
	SharpVectors/Dom/Stylesheets/ILinkStyle.cs \
	SharpVectors/Dom/Stylesheets/IMediaList.cs \
	SharpVectors/Dom/Stylesheets/IStyleSheet.cs \
	SharpVectors/Dom/Stylesheets/IStyleSheetList.cs \
	SharpVectors/Dom/Svg/IContainerElement.cs \
	SharpVectors/Dom/Svg/IGraphicsElement.cs \
	SharpVectors/Dom/Svg/ISharpDoNotPaint.cs \
	SharpVectors/Dom/Svg/ISharpGdiPath.cs \
	SharpVectors/Dom/Svg/ISvgWindow.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgTests.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAElement.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAngle.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedAngle.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedBoolean.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedEnumeration.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedInteger.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedLength.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedLengthList.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedNumber.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedNumberList.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedRect.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgAnimatedString.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgColor.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgCursorElement.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgElement.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgEvent.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgExternalResourcesRequired.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgFitToViewBox.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgIccColor.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgLangSpace.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgLength.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgLengthList.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgList.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgLocatable.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgNumber.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgNumberList.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgRect.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgStringList.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgStylable.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgTransformable.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgUriReference.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgViewElement.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgViewSpec.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/ISvgZoomAndPan.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgAngleType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgColorType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterBlendMode.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterChannelSelector.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterColorMatrix.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterComponentTransferType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterCompositeOperator.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterEdgeMode.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterStitchOption.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgFilterTurbulenceType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgLengthType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgMeetOrSlice.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgMorphologyOperator.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgPreserveAspectRatioType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgUnitType.cs \
	SharpVectors/Dom/Svg/Basic\ Data\ Types\ and\ Interfaces/SvgZoomAndPanType.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgAnimatedPoints.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgCircleElement.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgEllipseElement.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgLineElement.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgPolygonElement.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgPolylineElement.cs \
	SharpVectors/Dom/Svg/Basic\ Shapes/ISvgRectElement.cs \
	SharpVectors/Dom/Svg/Clipping\ Masking\ and\ Compositing/ISharpMarkerHost.cs \
	SharpVectors/Dom/Svg/Clipping\ Masking\ and\ Compositing/ISvgClipPathElement.cs \
	SharpVectors/Dom/Svg/Clipping\ Masking\ and\ Compositing/ISvgMaskElement.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgAnimatedPreserveAspectRatio.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgAnimatedTransformList.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgMatrix.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgPoint.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgPointList.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgPreserveAspectRatio.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgTransform.cs \
	SharpVectors/Dom/Svg/Coordinate\ Systems\ Transformations\ and\ Units/ISvgTransformList.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgDefsElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgDescElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgDocument.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgElementInstance.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgElementInstanceList.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgGElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgImageElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgSVGElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgSwitchElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgSymbolElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgTitleElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/ISvgUseElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgComponentTransferFunctionElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEBlendElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEColorMatrixElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEComponentTransferElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFECompositeElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEConvolveMatrixElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEDiffuseLightingElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEDisplacementMapElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEDistantLightElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEFloodElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEFuncAElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEFuncBElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEFuncGElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEFuncRElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEGaussianBlurElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEImageElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEMergeElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEMergeNodeElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEMorphologyElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEOffsetElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFEPointLightElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFESpecularLightingElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFESpotLightElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFETileElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFETurbulenceElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFilterElement.cs \
	SharpVectors/Dom/Svg/Filters/ISvgFilterPrimitiveStandardAttributes.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/ISvgGradientElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/ISvgLinearGradientElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/ISvgPatternElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/ISvgRadialGradientElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/ISvgStopElement.cs \
	SharpVectors/Dom/Svg/Metadata/ISvgMetadataElement.cs \
	SharpVectors/Dom/Svg/Painting/ISvgMarkerElement.cs \
	SharpVectors/Dom/Svg/Painting/ISvgPaint.cs \
	SharpVectors/Dom/Svg/Painting/SvgMarkerOrient.cs \
	SharpVectors/Dom/Svg/Painting/SvgMarkerUnit.cs \
	SharpVectors/Dom/Svg/Painting/SvgPaintType.cs \
	SharpVectors/Dom/Svg/Paths/ISvgAnimatedPathData.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathElement.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSeg.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegArcAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegArcRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegClosePath.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoCubicAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoCubicRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoCubicSmoothAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoCubicSmoothRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoQuadraticAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoQuadraticRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoQuadraticSmoothAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegCurvetoQuadraticSmoothRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegLinetoAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegLinetoHorizontalAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegLinetoHorizontalRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegLinetoRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegLinetoVerticalAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegLinetoVerticalRel.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegList.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegMovetoAbs.cs \
	SharpVectors/Dom/Svg/Paths/ISvgPathSegMovetoRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegType.cs \
	SharpVectors/Dom/Svg/Rendering/ISvgRenderer.cs \
	SharpVectors/Dom/Svg/Rendering/RenderingNode.cs \
	SharpVectors/Dom/Svg/Scripting/ISvgScriptElement.cs \
	SharpVectors/Dom/Svg/Text/ISvgTextContentElement.cs \
	SharpVectors/Dom/Svg/Text/ISvgTextElement.cs \
	SharpVectors/Dom/Svg/Text/ISvgTextPathElement.cs \
	SharpVectors/Dom/Svg/Text/ISvgTextPositioningElement.cs \
	SharpVectors/Dom/Svg/Text/ISvgTRefElement.cs \
	SharpVectors/Dom/Svg/Text/ISvgTSpanElement.cs \
	SharpVectors/Dom/Views/IAbstractView.cs \
	SharpVectors/Dom/Views/IDocumentView.cs

REFERENCES = \
	-r:System.Drawing.dll

all: $(ASSEMBLY)

$(ASSEMBLY): $(FILES)
	mkdir -p $(BINDIR)
	$(MCS) -debug -out:$@ -target:library $(REFERENCES) $(FILES)

CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
