BINDIR		= $(top_builddir)/build/
ASSEMBLY_DLL	= SharpVectorObjectModel.dll 
ASSEMBLY	= $(BINDIR)/$(ASSEMBLY_DLL)

FILES = \
	AssemblyInfo.cs \
	SharpVectors/Dom/Svg/SvgException.cs \
	SharpVectors/Dom/Svg/SvgExternalResourcesRequiredException.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgTests.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAngle.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedAngle.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedBoolean.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedEnumeration.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedLength.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedLengthList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedNumber.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedNumberList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedPreserveAspectRatio.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedRect.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedString.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgAnimatedTransformList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgColor.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgElement.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgExternalResourcesRequired.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgFitToViewBox.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgLength.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgLengthList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgMatrix.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgNumber.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgNumberList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgPoint.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgPointList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgPreserveAspectRatio.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgRect.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgStringList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgTransform.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgTransformList.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgUriReference.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgViewSpec.cs \
	SharpVectors/Dom/Svg/Basic\ types/SvgZoomAndPan.cs \
	SharpVectors/Dom/Svg/Clipping\ Masking\ and\ Compositing/SvgClipPathElement.cs \
	SharpVectors/Dom/Svg/Clipping\ Masking\ and\ Compositing/SvgMaskElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgDefsElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgDescElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgDocument.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgElementInstance.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgElementInstanceList.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgGElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgImageElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgStyleableElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgSvgElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgSwitchElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgSymbolElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgTitleElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgTransformableElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgUseElement.cs \
	SharpVectors/Dom/Svg/Document\ Structure/SvgWindow.cs \
	SharpVectors/Dom/Svg/Filters/SvgFilterElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/SvgGradientElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/SvgLinearGradientElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/SvgPatternElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/SvgRadialGradientElement.cs \
	SharpVectors/Dom/Svg/Gradients\ and\ Patterns/SvgStopElement.cs \
	SharpVectors/Dom/Svg/Metadata/SvgMetadataElement.cs \
	SharpVectors/Dom/Svg/Paint/SvgMarkerElement.cs \
	SharpVectors/Dom/Svg/Paint/SvgPaint.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathElement.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSeg.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegArc.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegArcAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegArcRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegClosePath.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurveto.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurveToCubic.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoCubicAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoCubicRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoCubicSmoothAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoCubicSmoothRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoQuadratic.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoQuadraticAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoQuadraticRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoQuadraticSmoothAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegCurvetoQuadraticSmoothRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLineto.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLinetoAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLinetoHorizontalAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLinetoHorizontalRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLinetoRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLinetoVerticalAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegLinetoVerticalRel.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegList.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegMoveTo.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegMovetoAbs.cs \
	SharpVectors/Dom/Svg/Paths/SvgPathSegMovetoRel.cs \
	SharpVectors/Dom/Svg/Scripting/SvgScriptElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgCircleElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgEllipseElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgLineElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgPolyElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgPolygonElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgPolylineElement.cs \
	SharpVectors/Dom/Svg/Shapes/SvgRectElement.cs \
	SharpVectors/Dom/Svg/Text/SvgTextContentElement.cs \
	SharpVectors/Dom/Svg/Text/SvgTextElement.cs \
	SharpVectors/Dom/Svg/Text/SvgTextPositioningElement.cs \
	SharpVectors/Dom/Svg/Text/SvgTRefElement.cs \
	SharpVectors/Dom/Svg/Text/SvgTSpanElement.cs \
	SharpVectors/Enumerators/SvgLengthListEnumerator.cs \
	SharpVectors/Enumerators/SvgListEnumerator.cs \
	SharpVectors/Enumerators/SvgNumberListEnumerator.cs \
	SharpVectors/Enumerators/SvgPointListEnumerator.cs \
	SharpVectors/Enumerators/SvgStringListEnumerator.cs \
	SharpVectors/Enumerators/SvgTransformListEnumerator.cs
	
REFERENCES = \
	-lib:$(BINDIR) \
	-r:System.Drawing.dll \
	-r:SharpVectorCss.dll \
	-r:SharpVectorUtil.dll \ 
	-r:SharpVectorBindings.dll \ 
	-r:SharpVectorDom.dll

all: $(ASSEMBLY)

$(ASSEMBLY): $(FILES)
	mkdir -p $(BINDIR)
	$(MCS)  -debug -out:$@ -target:library $(REFERENCES) $(FILES)

CLEANFILES = $(ASSEMBLY) $(ASSEMBLY).mdb
